# Mini-Project

./: .gitignore
FaceRecognizer/: extract_face_driver.py  generals.py  training.py
FaceRecognizer-C/: CMakeLists.txt  FaceRecognizer.cpp  FaceRecognizer.h  Generals.cpp  Generals.h  Makefile  Video.cpp  Video.h  main.cpp
face_recognizer/: face_reco.py  face_recognizer.py
