cmake_minimum_required(VERSION 3.1)
project(Comma)
#include(/mnt/C0AAC364AAC35616/MINI_PROJECT/dlib-19.0/dlib/cmake)
set(OpenCV_DIR /usr/local/share/OpenCV)
find_package( OpenCV REQUIRED)
set (CMAKE_CXX_STANDARD 11)
add_executable( Comma main.cpp Generals.cpp Generals.h Video.cpp Video.h)
#add_library(FACE FaceRecognizer.cpp FaceRecognizer.h)
#add_library(GENERALS Generals.cpp Generals.h)
target_link_libraries( Comma ${OpenCV_LIBS} dlib)